--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -52,6 +52,8 @@ input, textarea, button, select {
   border-radius: 0;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
+  outline: none;
+  border: none;
 }
 
 :root{
