--- a/src/styles/components/pages/Outing.module.css
+++ b/src/styles/components/pages/Outing.module.css
@@ -31,3 +31,172 @@
 	height: 1px;
 	background: rgba(var(--color-primary), .1);
 }
+
+.nowApply{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	
+	background: rgba(var(--color-white), 1);
+	border-radius: 10px;
+	padding: 20px;
+	border: 1px solid rgba(var(--color-primary), .1);
+
+	width: 100%;
+	gap: 10px;
+}
+.nowApplyWhen{
+	font-size: 18px;
+	font-weight: 600;
+}
+.nowApplyMeal{
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	gap: 10px;
+}
+.nowApplyMealBox{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	gap: 5px;
+	border: 1px solid rgba(var(--color-primary), .1);
+	border-radius: 10px;
+	padding: 15px 0;
+	width: 100%;
+}
+.nowApplyMealTitle{
+	font-size: 16px;
+	font-weight: 600;
+}
+.nowApplyMealContent{
+	font-size: 16px;
+	font-weight: 300;
+}
+.nowApplyCont{
+	font-size: 15px;
+	font-weight: 300;
+	color:rgba(var(--color-primary), .7);
+	text-align: center;
+}
+.nowBox{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	gap: 10px;
+}
+.applyBox{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	gap: 5px;
+	border: 1px solid rgba(var(--color-primary), .1);
+	border-radius: 10px;
+	padding: 15px 0;
+	width: 100%;
+}
+.selects{
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	gap: 5px;
+}
+.applySelect{
+	width: 100%;
+	padding: 10px 15px;
+	border: 1px solid rgba(var(--color-primary), .1);
+	border-radius: 5px;
+	cursor: pointer;
+
+	background: rgba(var(--color-white), 1);
+
+	font-size: 15px;
+	outline: none;
+
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: flex-start;
+	gap: 10px;
+
+	margin: 0;
+}
+.applyInput{
+	width: 100%;
+	padding: 10px 15px;
+	border: 1px solid rgba(var(--color-primary), .1);
+	border-radius: 5px;
+
+	background: rgba(var(--color-white), 1);
+
+	font-size: 15px;
+	outline: none;
+
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: flex-start;
+	gap: 10px;
+
+	margin: 0;
+	background-color: rgba(var(--color-white), 1);
+}
+.times {
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	gap: 7px;
+}
+.applyInputTime{
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	border: 1px solid rgba(var(--color-primary), .1);
+	
+	font-size: 15px;
+	outline: none;
+	padding: 8px 15px;
+
+	color: rgba(var(--color-primary), 1);
+	border-radius: 5px;
+
+	background-color: rgba(var(--color-white), 1);
+}
+.timesBox{
+	border-radius: 5px;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	gap: 10px;
+}
+.applyBtn{
+	width: 100%;
+	padding: 10px 15px;
+	border: 1px solid rgba(var(--color-primary), .1);
+	border-radius: 5px;
+	cursor: pointer;
+
+	background: rgba(var(--color-8), 1);
+	color: rgba(var(--color-white), 1);
+
+	font-size: 15px;
+	font-weight: 600;
+	outline: none;
+
+	transition: opacity .2s ease-in-out;
+}
