--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,7 +23,18 @@ body {
   align-items: center;
   justify-content: center;
 }
-#__next, .main{
+#__next{
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  border-top: 0;
+  border-bottom: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.main{
   width: 100%;
   max-width: 700px;
   height: 100%;
