--- a/src/styles/pages/Home.module.css
+++ b/src/styles/pages/Home.module.css
@@ -45,3 +45,24 @@
 	color: rgba(var(--color-primary),1);
 	border-bottom: 2px solid rgba(var(--color-8), 1);
 }
+
+.error{
+	font-size: 15px;
+	font-weight: 400;
+	color: rgba(var(--color-primary), .3);
+	padding: 30px 0 10px 0;
+}
+.error > a{
+	color: rgba(var(--color-8), .5);
+	text-decoration: underline;
+}
+
+.meal{
+	width: 100%;
+	height: 100%;
+	border: 0;
+	padding: 0;
+	margin: 0;
+	outline: 0;
+	border-radius: 0 0 12px 12px;
+}
