--- a/src/styles/pages/Home.module.css
+++ b/src/styles/pages/Home.module.css
@@ -50,7 +50,7 @@
 	font-size: 15px;
 	font-weight: 400;
 	color: rgba(var(--color-primary), .3);
-	padding: 30px 0 10px 0;
+	padding: 30px 0 0 0;
 }
 .error > a{
 	color: rgba(var(--color-8), .5);
