--- a/src/styles/pages/Home.module.css
+++ b/src/styles/pages/Home.module.css
@@ -51,10 +51,12 @@
 	font-weight: 400;
 	color: rgba(var(--color-primary), .3);
 	padding: 30px 0 0 0;
+	text-align: center;
 }
 .error > a{
 	color: rgba(var(--color-8), .5);
 	text-decoration: underline;
+	text-align: center;
 }
 
 .meal{
