--- a/src/styles/pages/Home.module.css
+++ b/src/styles/pages/Home.module.css
@@ -21,6 +21,8 @@
 	flex-direction: row;
 	align-items: center;
 	justify-content: space-around;
+
+	z-index: 999999;
 }
 .homeTypeBtn{
 	font-size: 14px;
