--- a/src/styles/components/Loading.module.css
+++ b/src/styles/components/Loading.module.css
@@ -1,51 +1,3 @@
-
-.ldsripple {
-  display: inline-block;
-  position: relative;
-  width: 80px;
-  height: 80px;
-}
-.ldsripple div {
-  position: absolute;
-  border: 4px solid rgba(var(--color-8), 1);
-  opacity: 1;
-  border-radius: 50%;
-  animation: ldsripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
-}
-.ldsripple div:nth-child(2) {
-  animation-delay: -0.5s;
-}
-@keyframes ldsripple {
-  0% {
-    top: 36px;
-    left: 36px;
-    width: 0;
-    height: 0;
-    opacity: 0;
-  }
-  4.9% {
-    top: 36px;
-    left: 36px;
-    width: 0;
-    height: 0;
-    opacity: 0;
-  }
-  5% {
-    top: 36px;
-    left: 36px;
-    width: 0;
-    height: 0;
-    opacity: 1;
-  }
-  100% {
-    top: 0px;
-    left: 0px;
-    width: 72px;
-    height: 72px;
-    opacity: 0;
-  }
-}
-
 .box{
 	background: rgba(var(--color-0), .3);
 	backdrop-filter: blur(3px);
@@ -59,4 +11,41 @@
 	align-items: center;
 	justify-content: center;
 	z-index: 999999999;
+  gap: 15px;
 }
+.box > div {
+  font-size: 15px;
+  font-weight: 600;
+  color: rgba(var(--color-8), 1);
+}
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  display: inline-block;
+  border-top: 4px solid rgba(var(--color-6), 1);
+  border-right: 4px solid transparent;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+.loader::after {
+  content: '';  
+  box-sizing: border-box;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  border-bottom: 4px solid rgba(var(--color-8), 1);
+  border-left: 4px solid transparent;
+}
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+} 
