--- a/src/styles/components/Loading.module.css
+++ b/src/styles/components/Loading.module.css
@@ -1,6 +1,4 @@
 .box{
-	background: rgba(var(--color-0), .3);
-	backdrop-filter: blur(3px);
 	width: 100%;
 	height: 100%;
 	position: fixed;
@@ -11,12 +9,27 @@
 	align-items: center;
 	justify-content: center;
 	z-index: 999999999;
-  gap: 15px;
+
+  background: rgba(var(--color-0), 0);
+	/* backdrop-filter: blur(5px); */
 }
-.box > div {
+.title {
   font-size: 15px;
   font-weight: 600;
   color: rgba(var(--color-8), 1);
+}
+.boxInner{
+  display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+  padding: 20px 30px;
+  border-radius: 20px;
+  gap: 15px;
+  background: rgba(var(--color-white), .8);
+  border: 1px solid rgba(var(--color-8), .1);
+  /* box-shadow: 0 0 20px rgba(var(--color-8), .05); */
+	backdrop-filter: blur(5px);
 }
 
 .loader {
