--- a/src/styles/components/Loading.module.css
+++ b/src/styles/components/Loading.module.css
@@ -23,7 +23,7 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-  padding: 20px 30px;
+  padding: 20px 30px 13px 30px;
   border-radius: 20px;
   gap: 15px;
   background: rgba(var(--color-white), .8);
