--- a/src/styles/components/pages/Stay.module.css
+++ b/src/styles/components/pages/Stay.module.css
@@ -99,9 +99,8 @@
 	font-weight: 500;
 
 	text-align: center;
-}
-.tdInnerSelected{
-	filter:contrast(10);
+
+	transition: color .1s ease-in-out, background .1s ease-in-out;
 }
 
 .thn, .thInner, .tdn {
