--- a/src/styles/components/pages/Outing.module.css
+++ b/src/styles/components/pages/Outing.module.css
@@ -210,3 +210,22 @@
 	font-weight: 500;
 	color: rgba(var(--color-primary), .5);
 }
+
+.input{
+	width: 100%;
+	border-radius: 5px;
+	border: 1px solid rgba(var(--color-primary), .1);
+	padding: 10px 10px;
+	font-size: 15px;
+	/* font-weight: 100; */
+	background-color: rgba(var(--color-white), 1);
+}
+.hbm{
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: flex-start;
+	gap: 5px;
+	margin-bottom: 5px;
+}
