--- a/src/styles/components/Header.module.css
+++ b/src/styles/components/Header.module.css
@@ -8,8 +8,8 @@
 	padding: 15px 30px;
 	/* margin: 0 0 10px 0; */
 
-	background: rgba(var(--color-0), 0.4);
-	border-bottom: 1px solid rgba(var(--color-8), .1);
+	/* background: rgba(var(--color-0), 0.1); */
+	border-bottom: 1px solid rgba(var(--color-primary), .1);
 	z-index: 999999;
 }
 
