--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,5 @@
-@import url(//fonts.2w.vc/suit/static/font.css);* {
-  font-family: SUIT,sans-serif;
+@import url(//fonts.2w.vc/wanted-sans/static/font.css);* {
+  font-family: "Wanted Sans", sans-serif;
   letter-spacing: -.02rem;
   margin: 0;
   padding: 0
