--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,23 @@
+@import url(//fonts.2w.vc/wanted-sans/static/font.css);
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+* {
+  font-family: "Wanted Sans", sans-serif;
+  letter-spacing: -.02rem;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: rgb(var(--color-text) / 1);
+  -webkit-tap-highlight-color : transparent;
+  word-break: keep-all;
+}
+
 @layer base {
   :root{
+    --font-wanted-sans: "Wanted Sans", sans-serif;
+
     --color-background: 253 249 255;
     --color-primary: 90 25 155;
     --color-text: 17 0 44;
@@ -21,21 +35,6 @@
       --color-white: 30 30 30;
     }
   }
-}
-
-@import url(//fonts.2w.vc/wanted-sans/static/font.css);* {
-  font-family: "Wanted Sans", sans-serif;
-  letter-spacing: -.02rem;
-  margin: 0;
-  padding: 0
-}
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-  color: rgb(var(--color-text) / 1);
-  -webkit-tap-highlight-color : transparent;
-  word-break: keep-all;
 }
 html,
 body {
