fix: scroll bug

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,6 +48,7 @@ html {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow-y: hidden;
 }
 body{
   max-width: 700px;
