--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,6 +45,9 @@ body {
   overflow-x: hidden;
 }
 html {
+  min-height: calc(100% + env(safe-area-inset-top));
+  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+  
   display: flex;
   flex-direction: column;
   justify-content: center;
