--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,25 +14,29 @@
   color: rgb(var(--color-text) / 1);
   -webkit-tap-highlight-color : transparent;
   word-break: keep-all;
+  transition: color var(--key-interval) ease-in-out, background-color var(--key-interval) ease-in-out;
 }
 
 @layer base {
   :root{
+    --key-interval: 300ms;
+    --key-color: 64 84 214;
+
     --font-wanted-sans: "Wanted Sans", sans-serif;
     --color-background: 250 250 255;
-    --color-primary: 64 84 214;
+    --color-primary: var(--key-color);
     --color-text: 11 17 54;
     --color-white: 255 255 255;
 
     @media (prefers-color-scheme: dark) { 
       --color-background: 0 0 0;
-      --color-primary: 64 84 214;
+      --color-primary: var(--key-color);
       --color-text: 230 230 230;
       --color-white: 15 15 15;
     }
     @media (prefers-dark-interface) {
       --color-background: 0 0 0;
-      --color-primary: 64 84 214;
+      --color-primary: var(--key-color);
       --color-text: 230 230 230;
       --color-white: 15 15 15;
     }
