--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,6 +21,7 @@
   :root{
     --key-interval: 300ms;
     --key-color: 64 84 214;
+    --color-green: 0 200 5;
 
     --font-wanted-sans: "Wanted Sans", sans-serif;
     --color-background: 250 250 255;
