--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,20 +48,16 @@ body {
   width: 100%;
   height: 100%;
   overflow-x: hidden;
-}
-html {
   min-height: calc(100% + env(safe-area-inset-top));
   padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
-  
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  overflow-y: hidden;
   background: rgb(var(--color-background) / 1);
 }
-body{
+main {
   max-width: 700px;
+  width: 100%;
 }
 
 a {
