fix: padding test1

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,7 +67,7 @@ body {
   height: 100%;
   overflow-x: hidden;
   min-height: calc(100% + env(safe-area-inset-top));
-  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+  padding: 0 env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
   display: flex;
   flex-direction: column;
   align-items: center;
