--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,12 +66,14 @@ body {
   width: 100%;
   height: 100%;
   overflow-x: hidden;
-  min-height: calc(100%);
-  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
   display: flex;
   flex-direction: column;
   align-items: center;
   background: rgb(var(--color-background) / 1);
+}
+body {
+  min-height: calc(100% + env(safe-area-inset-top));
+  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
 }
 main {
   max-width: 700px;
