feat: refresh icon

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -165,3 +165,16 @@ input, textarea, button, select {
   0% { transform: rotate(0deg) }
   100% { transform: rotate(360deg) }
 }
+
+.rotation {
+  animation: rotation 1s infinite linear;
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+}
