--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -59,6 +59,11 @@
       --color-text: var(--color-text-dark);
       --color-white: var(--color-white-dark);
     }
+
+    --safe-area-inset-top: env(safe-area-inset-top);
+    --safe-area-inset-right: env(safe-area-inset-right);
+    --safe-area-inset-bottom: env(safe-area-inset-bottom);
+    --safe-area-inset-left: env(safe-area-inset-left, 0.5vh);
   }
 }
 html,
