--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,6 +46,19 @@
     --color-background: var(--color-background-light);
     --color-text: var(--color-text-light);
     --color-white: var(--color-white-light);
+
+    @media (prefers-color-scheme: dark) { 
+      --color-primary: var(--key-color);
+      --color-background: var(--color-background-dark);
+      --color-text: var(--color-text-dark);
+      --color-white: var(--color-white-dark);
+    }
+    @media (prefers-color-scheme: light) { 
+      --color-primary: var(--key-color);
+      --color-background: var(--color-background-light);
+      --color-text: var(--color-text-light);
+      --color-white: var(--color-white-light);
+    }
   }
   :root[color-theme="light"] {
     --color-primary: var(--key-color);
