--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,10 @@
   transition: var(--transition-default);
 }
 
+:root {
+  overscroll-behavior: none;
+}
+
 @layer base {
   :root{
     --key-interval: 300ms;
@@ -84,7 +88,7 @@ body {
   background: rgb(var(--color-background) / 1);
 }
 body {
-  min-height: calc(100% + env(safe-area-inset-top));
+  min-height: calc(100vh + env(safe-area-inset-top) - env(safe-area-inset-bottom));
   padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
 }
 main {
