--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -89,7 +89,7 @@ body {
 }
 body {
   min-height: calc(100vh + env(safe-area-inset-top) - env(safe-area-inset-bottom));
-  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+  /* padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left); */
 }
 main {
   max-width: 700px;
