--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,10 @@
   transition: var(--transition-default);
 }
 
+.wmde-markdown {
+  background: transparent !important;
+}
+
 @layer base {
   :root{
     --key-interval: 300ms;
